--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,5 +16,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.org.springframework.http.converter.json=DEBUG
 
 
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 
 
